--- a/supply-chain/package.json
+++ b/supply-chain/package.json
@@ -16,6 +16,7 @@
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scrollbars-custom": "^4.1.1",
     "web3": "^4.8.0"
   },
   "devDependencies": {
