--- a/supply-chain/package.json
+++ b/supply-chain/package.json
@@ -1,5 +1,6 @@
 {
   "name": "supply-chain",
+  "homepage": "https://ctlnlzr.github.io/Supply-chain",
   "private": true,
   "version": "0.0.0",
   "type": "module",
